fix(Header): fix title wrap for text overflow

--- a/src/components/ui/header/Header.module.css
+++ b/src/components/ui/header/Header.module.css
@@ -6,6 +6,9 @@
 }
 
 .arrowBack {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: fit-content;
   height: fit-content;
 }
@@ -20,5 +23,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-right: 2rem;
+  overflow: hidden;
+  white-space: nowrap;
+  padding-right: calc(2rem + 0.8rem); /* 2rem is the arrowBackContainer width*/
+  padding-left: 0.8rem;
+}
+
+.titleContainer h1 {
+  width: fit-content;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
